<resources>

    <string name="app_name">InstagramViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="popular_photos_caption">Popular on Instagram</string>
    <string name="username_default_text">username</string>
    <string name="time_default_text">time</string>
    <string name="like_default_text">likes</string>
    <string name="caption_default_text">This is a default caption</string>
    <string name="comment_1_default_text">comment 1</string>
    <string name="comment_2_default_text">comment 2</string>
    <string name="view_all_comments_default_text">view all comments</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="comments_caption">Comments</string>
</resources>
