<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:id="@+id/card1">


<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp">




        <com.makeramen.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgProfile"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher"
            app:riv_border_color="#aaaaaa"
            app:riv_border_width="1dp"
            app:riv_corner_radius="18dp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingRight="8dp"
            android:paddingTop="15dp"
            android:text="@string/time_default_text"
            android:textColor="#aaaaaa" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imgProfile"
            android:layout_toRightOf="@+id/imgProfile"
            android:paddingTop="15dp"
            android:text="@string/username_default_text"
            android:textColor="@color/instagram_bold_font"
            android:textStyle="bold" />



    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvLikes"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingBottom="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:text="@string/caption_default_text" />

    <com.melnikacg.instagramviewer.View.ExImageView
        android:id="@+id/imgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgProfile"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />


    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgPhoto"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/like_default_text"
        android:textColor="@color/instagram_bold_font"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvComment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvViewAllComments"
        android:paddingBottom="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="0dp"
        android:text="@string/comment_1_default_text" />

    <TextView
        android:id="@+id/tvComment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvComment1"
        android:paddingBottom="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="0dp"
        android:text="@string/comment_2_default_text" />

    <TextView
        android:id="@+id/tvViewAllComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCaption"
        android:clickable="true"
        android:paddingBottom="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="0dp"
        android:text="@string/view_all_comments_default_text"
        android:textColor="#aaaaaa"
        android:textStyle="bold" />

</RelativeLayout>
</android.support.v7.widget.CardView><!--</RelativeLayout>-->